fix some layout bugs

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,8 +8,19 @@
   flex-grow: 1;
   display: flex;
   flex-direction: column;
-  padding: 45px;
   background-color: #f9fafb;
   box-sizing: border-box;
   overflow-y: auto;
+  padding: 20px;
+}
+
+@media (min-width: 768px) {
+  .content {
+    padding: 45px;
+  }
+}
+
+/* todo 待修改 */
+.MuiGrid-item {
+  padding: 0 !important;
 }
